--- a/src/common/style/reset.less
+++ b/src/common/style/reset.less
@@ -16,7 +16,7 @@ html, body, body div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquot
     box-sizing: border-box;
 }
 html{
-  overflow: hidden;
+  // overflow: hidden;
 }
 
 main, article, aside, figure, footer, header, nav, section, details, summary {
